[tool.poetry]
name = "clint"
version = "0.1.0"
description = "Conventional Commits Linter"
authors = ["Ricardo Cisterna <r.cisternasantos@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
pylint = "^2.14.3"
isort = {extras = ["colors"], version = "^5.10.1"}
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["clint", "test"]

[tool.pylint.MAIN]
load-plugins = [
    "pylint.extensions.docparams"
]

[tool.pylint.format]
max-line-length = "88"

[tool.coverage.report]
fail_under = 80
skip_empty = true
