[tool.poetry]
name = "clint"
version = "0.1.0"
description = "Conventional Commits Linter"
authors = ["Ricardo Cisterna <r.cisternasantos@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
pylint = "^2.14.3"
isort = {extras = ["colors"], version = "^5.10.1"}
coverage = "^6.4.1"
pytest-mock = "^3.8.1"
Faker = "^13.14.0"
pydocstyle = {extras = ["toml"], version = "^6.1.1"}
bpython = "^0.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["clint", "test"]

[tool.pylint.format]
max-line-length = "88"

[tool.pydocstyle]
convention = "numpy"

[tool.coverage.report]
fail_under = 80
skip_empty = true
